# ok-note-client

./: package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
src/: colors.css  getNodesFromState.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  graph.rs  lib.rs  main.rs  node.rs  state.rs
src/components/: Editor.tsx  Header.tsx  LeftPanel.tsx  RightPanel.tsx
src/components/node-types/: LabelNode.tsx  NodeStyles.css  nodeTypes.ts
src/models/: chatMessage.ts  flowSlice.ts  immutable.ts  node.ts  store.ts  uiSlice.ts
src/views/: App.css  App.tsx
